shs-50: fix bug related to menu overlap/remove unnec. logic twig

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_megamenu.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_megamenu.scss
@@ -448,6 +448,7 @@ $hb-link-bar-link: 100%;
         color: hb-get-global-color('black', $hc-colorful-globals);
         box-shadow: 0 hb-calculate-rems(10px) hb-calculate-rems(19px) rgba(0, 0, 0, 0.63);
         transform: translateX(-50%);
+        z-index: 1;
       }
     }
   }
